# whitebox

./: .gitignore  CMakeLists.txt  README.md  actions.yaml  demo.cpp  demo.mgc.xml  demo.xml  gen.sh
activity_diagram/: activities.ts  errors.ts  main.ts  package.json  postprocessors.ts  tsconfig.json
broker/: CMakeLists.txt  app.cpp  app.h  async_call.h  async_call_factory.cpp  async_call_factory.h  async_call_impl.h  async_service.cpp  async_service.h  completion_queue_component.cpp  completion_queue_component.h  connect_async_call.cpp  connect_async_call.h  connection.h  connection_impl.cpp  connection_impl.h  connection_manager.h  connector.h  connector_impl.cpp  connector_impl.h  connector_manager.cpp  connector_manager.h  errors.cpp  errors.h  logging.cpp  logging.h  main.cpp  robot.cpp  robot.h  robot_manager.cpp  robot_manager.h  robot_setup_async_call.cpp  robot_setup_async_call.h  robot_teardown_async_call.cpp  robot_teardown_async_call.h  server.cpp  server.h
broker/protos/: common.proto
broker_common/: CMakeLists.txt  README.md  app.cpp  app.h  async_call_impl.h  connect_async_call.cpp  connection.h  connection_impl.h  connector.h  connector_impl.cpp  connector_impl.h  connector_manager.cpp  connector_manager.h  connector_manager_impl.h  errors.cpp  logging.cpp  logging.h  robot.cpp  robot_manager.h  robot_setup_async_call.cpp  robot_teardown_async_call.cpp  server.cpp  server.h  server_impl.h
codegen/: SendEventAction.go  main.go
codegen/templates/: CMakeLists.txt.tpl  Event.h.tpl  RecvEvent.cpp.tpl  SendEvent.cpp.tpl  init_grpc_async_calls.h.tpl  x51.proto.tpl
mgc/: CMakeLists.txt  README.md  app.cpp  app_impl.cpp  concrete_app.cpp  connection_impl.cpp  connector_manager_impl.cpp  connector_manager_impl.h  mgc_connection.cpp  mgc_connection.h  mgc_connector.cpp  mgc_connector.h  mgc_connector_manager.cpp  mgc_server.cpp  server_impl.h
mgc/protos/: CMakeLists.txt  broker.proto
mgc/resources/: actions.yaml
protos/: common.proto  x51.proto
tools/codegen/: RecvEventAction.go  SendEventAction.go  SendRecvEvent.go  main.go
tools/codegen-ts/: index.js  index.ts  package.json  tsconfig.json
tools/codegen/ent/: action_recvevent.go  action_sendevent.go  action_sendrecvevent.go  entity_manager.go  event_request.go  event_response.go  metadata.go  misc.go  utils.go
tools/codegen/templates/: CMakeLists.txt.tpl  Event.h.tpl  RecvEvent.cpp.tpl  SendEvent.cpp.tpl  SendRecvEvent.cpp.tpl  init_grpc_async_calls.h.tpl  x51.proto.tpl
worker/: README.md  action.js  action.ts  action_manager.ts  activities.js  activities.ts  activity.ts  broker.ts  codegen.ts  connect_activity.ts  errors.js  errors.ts  event.ts  job.ts  job_def.ts  job_manager.ts  job_receiver.ts  job_template.ts  logger.js  logger.ts  main.js  main.ts  main2.js  main3.js  package.json  postprocessors.js  postprocessors.ts  robot.js  robot.ts  sendrecvevent_activity.ts  t.js  t.ts  testcase.ts  testcase_manager.ts  tsconfig.json
worker/avtivities/: composite.ts  connect.ts  echo.ts  loop.ts  recvevent.ts  select.ts  sendevent.ts  sendrecvevent.ts  simple.ts  sleep.ts
worker_java/: build.gradle  settings.gradle
worker_java/src/main/kotlin/com/tac/whitebox/: Activity.kt  Application.kt
worker_java/src/test/kotlin/com/tac/whitebox/: ApplicationTests.kt
x51/: CMakeLists.txt  QuestTemplate.cpp  app.cpp  connection_impl.cpp  connection_impl.h  connector_impl.cpp  connector_impl.h  connector_manager_impl.h  server_impl.cpp  x51_connection.cpp  x51_connection.h  x51_connector.cpp  x51_connector.h  x51_connector_manager.cpp  x51_server.cpp
x51/protos/: CMakeLists.txt  broker.proto
